<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Actividades.MenuActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mar_comp"
            android:text="@string/menu"
            android:textSize="30sp" />
        <Button
            android:id="@+id/btn_jugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m_btn_Jugar"
            android:textAllCaps="false"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m_btn_High"
            android:textAllCaps="false"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m_btn_Conf"
            android:textAllCaps="false" />
    </LinearLayout>


</LinearLayout>